--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
-    "jest": "26.0.1",
+    "joi": "^17.6.0",
     "nodemon": "^2.0.15",
     "sequelize-cli": "6.2.0",
     "supertest": "4.0.2"
